# ChainGo

./: .gitignore  Anchor.toml  LICENSE  README.md  deploy.sh
actions/: .env.example  next.config.ts  package-lock.json  package.json  vercel.json
actions/app/: layout.tsx  page.tsx
actions/app/api/actions/join/: route.ts
actions/app/api/actions/join/complete/: route.ts
app/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  polyfills.ts
app/src/components/: Board.tsx  Game.tsx
app/src/hooks/: useGame.ts
app/src/utils/: gomoku.ts  program.ts
programs/chain_go/: Cargo.toml
programs/chain_go/src/: lib.rs
