[package]
name = "chain-go"
version = "0.1.0"
description = "ChainGo - Onchain Gomoku with MagicBlock Ephemeral Rollup"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chain_go"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.0", features = ["init-if-needed"] }
solana-program = "=2.2.0"
ephemeral-rollups-sdk = { version = "=0.10.5", features = ["anchor"] }
magicblock-magic-program-api = "=0.8.5"
session-keys = { version = "=3.0.11", features = ["no-entrypoint"] }
